--- a/app/views/publish_interface/providers/contact.html.erb
+++ b/app/views/publish_interface/providers/contact.html.erb
@@ -2,14 +2,14 @@
 <% content_for :page_title, title_with_error_prefix(page_title, @errors.present?) %>
 
 <% content_for :before_content do %>
-  <%= govuk_back_link_to(details_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+  <%= govuk_back_link_to(details_publish_provider_recruitment_cycle_path(@about_form.provider_code, @about_form.recruitment_cycle_year)) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with(
-      model: @provider,
-      url: contact_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year),
+      model: @about_form,
+      url: contact_publish_provider_recruitment_cycle_path(@about_form.provider_code, @about_form.recruitment_cycle_year),
       method: :put,
       builder: GOVUKDesignSystemFormBuilder::FormBuilder,
     ) do |f| %>
@@ -17,34 +17,22 @@
       <%= f.govuk_error_summary %>
 
       <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l"><%= @provider.provider_name %></span>
+        <span class="govuk-caption-l"><%= @about_form.provider_name %></span>
         <%= page_title %>
       </h1>
 
       <%= f.hidden_field :page, value: :contact %>
 
-      <% if current_user["admin"] %>
-        <div class="app-status-box app-status-box--admin">
-          <p class="govuk-body">
-            <%= govuk_tag(text: "Admin feature", colour: "purple") %>
-          </p>
-
-          <%= f.govuk_text_field(:provider_name,
-            label: { size: "m" },
-            data: { qa: "provider_name" }) %>
-        </div>
-      <% end %>
-
       <%= f.govuk_text_field(:email,
         form_group: { id: "email" },
-        label: { size: "m" },
+        label: { text: "Email address", size: "m" },
         autocomplete: "email",
         spellcheck: false,
         data: { qa: "email" }) %>
 
       <%= f.govuk_text_field(:telephone,
         form_group: { id: "telephone" },
-        label: { size: "m" },
+        label: { text: "Telephone number", size: "m" },
         width: 20,
         autocomplete: "tel",
         data: { qa: "telephone" }) %>
@@ -60,7 +48,7 @@
         width: 10,
         data: { qa: "ukprn" }) %>
 
-      <% if @provider.provider_type == "lead_school" %>
+      <% if @about_form.provider.provider_type == "lead_school" %>
         <%= f.govuk_text_field(:urn,
           form_group: { id: "urn" },
           label: { size: "m" },
@@ -70,7 +58,7 @@
 
       <%= f.govuk_fieldset legend: { text: "Contact address", size: "m" }, id: "address" do %>
         <%= f.govuk_text_field(:address1,
-          label: -> { safe_join([t("helpers.label.provider.address1"), " ", tag.span("line 1 of 2", class: "govuk-visually-hidden")]) },
+          label: -> { safe_join(["Building and street", " ", tag.span("line 1 of 2", class: "govuk-visually-hidden")]) },
           autocomplete: "address-line1",
           data: { qa: "address1" }) %>
 
@@ -80,11 +68,13 @@
           data: { qa: "address2" }) %>
 
         <%= f.govuk_text_field(:address3,
+          label: { text: "Town or city" },
           width: "two-thirds",
           autocomplete: "address-level2",
           data: { qa: "address3" }) %>
 
         <%= f.govuk_text_field(:address4,
+          label: { text: "County" },
           width: "two-thirds",
           autocomplete: "address-level1",
           data: { qa: "address4" }) %>
