--- a/app/views/support/courses/edit.html.erb
+++ b/app/views/support/courses/edit.html.erb
@@ -8,9 +8,9 @@
       <%= f.govuk_error_summary %>
 
       <%= f.govuk_text_field(:course_code,
-      label: { text: "Course code", tag: "h1", size: "m" }, width: 10) %>
+      label: { text: "Course code", size: "m" }, width: 10) %>
       <%= f.govuk_text_field(:name,
-      label: { text: "Course title", tag: "h1", size: "m" }, width: 10) %>
+      label: { text: "Course title", size: "m" }, width: 10) %>
       <%= f.govuk_date_field(:start_date,
       legend: { text: "Start date" }, width: 10) %>
 
