--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="govuk-template ">
   <head>
-    <title><%= yield :page_title %></title>
+    <title><%= yield :page_title %> - Publish teacher training courses - GOV.UK</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= canonical_tag %>
@@ -43,6 +43,7 @@
     <div class="govuk-width-container">
       <div class="govuk-width-container">
         <%= yield :breadcrumbs %>
+        <%= yield :before_content %>
       </div>
       <main class="govuk-main-wrapper " id="main-content" role="main">
         <div class="govuk-width-container">
