--- a/app/views/layouts/provider_record.html.erb
+++ b/app/views/layouts/provider_record.html.erb
@@ -14,6 +14,7 @@
     { name: "Details", url: support_provider_path(@provider) },
     { name: "Users", url: users_support_provider_path(@provider) },
     { name: "Courses", url: support_provider_courses_path(@provider) },
+    { name: "Locations", url: support_provider_locations_path(@provider) },
   ]) %>
 
   <%= yield %>
