--- a/app/views/support/allocations/index.html.erb
+++ b/app/views/support/allocations/index.html.erb
@@ -4,6 +4,6 @@
 
 <%= render "support/menu" %>
 
-<%= render PaginatedFilter::View.new(filters: @filters, collection: @allocations) do %>
+<%= render PaginatedFilter::View.new(filter_params: @filter_params, collection: @allocations) do %>
   <%= render AllocationRecordCard::View.with_collection(@allocations)%>
 <% end %>
