--- a/app/views/publish/courses/gcse_requirements/edit.html.erb
+++ b/app/views/publish/courses/gcse_requirements/edit.html.erb
@@ -4,9 +4,9 @@
   <%= govuk_back_link_to(publish_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code)) %>
 <% end %>
 
-<%# if params[:copy_from].present? %>
-  <%#= render partial: "courses/copy_content_warning", locals: { copied_fields: @copied_fields } %>
-<%# end %>
+<% if params[:copy_from].present? %>
+  <%= render partial: "publish/courses/copy_content_warning", locals: { copied_fields: @copied_fields } %>
+<% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -29,31 +29,14 @@
       GCSEs and equivalency tests
     </h1>
 
-      <%= f.govuk_radio_buttons_fieldset :accept_pending_gcse, legend: { text: "Will you consider candidates with pending GCSEs?", size: "m" }, hint: { text: "These are candidates who expect to have the qualification before the beginning of the course. You can give them an offer, on the condition that they pass their GCSEs." } do %>
-        <%= f.govuk_radio_button :accept_pending_gcse, true, label: { text: "Yes" }, data: { qa: "gcse_requirements__pending_gcse_yes_radio" }, link_errors: true %>
-        <%= f.govuk_radio_button :accept_pending_gcse, false, label: { text: "No" }, data: { qa: "gcse_requirements__pending_gcse_no_radio" } %>
-      <% end %>
-
-      <%= f.govuk_radio_buttons_fieldset :accept_gcse_equivalency, legend: { text: "Will you consider candidates who need to take an equivalency test in English, maths or science?", size: "m" } do %>
-        <%= f.govuk_radio_button :accept_gcse_equivalency, true, label: { text: "Yes" }, data: { qa: "gcse_requirements__gcse_equivalency_yes_radio" }, link_errors: true do %>
-          <%= f.govuk_fieldset legend: { text: "Which subjects will you accept equivalency tests in?", size: "s" } do %>
-            <%= f.govuk_check_box :accept_english_gcse_equivalency, "English", label: { text: "English" }, data: { qa: "gcse_requirements__english_equivalency" } %>
-            <%= f.govuk_check_box :accept_maths_gcse_equivalency, "Maths", label: { text: "Maths" }, data: { qa: "gcse_requirements__maths_equivalency" } %>
-            <% if @course.primary_course? %>
-              <%= f.govuk_check_box :accept_science_gcse_equivalency, "Science", label: { text: "Science" }, data: { qa: "gcse_requirements__science_equivalency" } %>
-            <% end %>
-          <% end %>
-          <%= f.govuk_text_area :additional_gcse_equivalencies, label: { text: "Details about equivalency tests you offer or accept", size: "s" }, hint: { text: "For example, if you offer the tests or ask candidates to use a third party, and if there are any costs to pay." }, data: { qa: "gcse_requirements__additional_requirements" }, max_words: 200 %>
-        <% end %>
-        <%= f.govuk_radio_button :accept_gcse_equivalency, false, label: { text: "No" }, data: { qa: "gcse_requirements__gcse_equivalency_no_radio" } %>
-      <% end %>
+     <%= render partial: "publish/courses/gcse_requirements", locals: { f: f, course_object: @source_course ? source_course : @course } %>
 
       <%= f.submit "Save", class: "govuk-button", data: { qa: "gcse_requirements__save" } %>
     <% end %>
   </div>
-  <aside class="govuk-grid-column-one-third">
-     <%# render(
-      partial: "courses/related_sidebar",
+  <aside class="govuk-grid-column-one-third" data-qa="course__related_sidebar">
+     <%= render(
+      partial: "publish/courses/related_sidebar",
       locals: {
         course: @course,
         page_path: gcses_pending_or_equivalency_tests_publish_provider_recruitment_cycle_course_path(@course.provider.provider_code, @course.recruitment_cycle_year, @course.course_code),
