--- a/app/views/publish/recruitment_cycles/_allocations.html.erb
+++ b/app/views/publish/recruitment_cycles/_allocations.html.erb
@@ -1,9 +1,10 @@
 <% if provider.accredited_body? %>
   <h2 class="govuk-heading-m">
+  <!-- below link not working? -->
     <%= govuk_link_to t("allocations_for_pe.#{Allocation.journey_mode}_state_link_text", period: next_allocation_cycle_period_text)
     #
     # TODO
-    # provider_recruitment_cycle_allocations_path(provider.provider_code, year)
+    # publish_provider_recruitment_cycle_allocations_path(provider.provider_code, year)
     %>
   </h2>
 
