--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,7 @@
         </div>
       </main>
     </div>
+    <%= debug params %>
     <%= render partial: "layouts/footer" %>
     <%= yield(:before_body_close) %>
   </body>
