--- a/app/views/sign_in/_default_signin_content.html.erb
+++ b/app/views/sign_in/_default_signin_content.html.erb
@@ -5,10 +5,10 @@
   <p class="govuk-body-m">Use DfE Sign-in to access your account.</p>
 
   <%= govuk_button_to("Sign in using DfE Sign-in", "/auth/dfe", class: "qa-sign_in_button") %>
-  
+
   <p class="govuk-body-m">If you do not have a DfE Sign-in account but need access to <%= I18n.t("service_name") %>, email <%= support_email %>.</p>
 <% else %>
   <p class="govuk-body-m">Use Personas to access an account.</p>
-  
-  <%= govuk_link_to "Sign in using a Persona", "/personas", class: "govuk-button" %>
+
+  <%= govuk_link_to "Sign in using a Persona", "/personas", class: "govuk-button", data: { qa: "sign-in-using-a-persona" } %>
 <% end %>
