Add support recruitment cycle page title

--- a/app/views/support/recruitment_cycle/index.html.erb
+++ b/app/views/support/recruitment_cycle/index.html.erb
@@ -1,3 +1,7 @@
+<%= render PageTitle::View.new(title: "support.rollover.index") %>
+
+<h1 class="govuk-heading-l"><%= t("components.page_titles.support.rollover.index") %></h1>
+
 <ul class="govuk-list govuk-list--spaced">
   <li>
     <%= govuk_link_to(
