--- a/app/views/support/_menu.html.erb
+++ b/app/views/support/_menu.html.erb
@@ -1,5 +1,7 @@
+#The PE allocations tab can be deleted after rollover 2022
+
 <%= render TabNavigation::View.new(items: [
-  { name: "Providers", url: support_recruitment_cycle_providers_path(params[:recruitment_cycle_year] || Settings.current_recruitment_cycle_year) },
-  { name: "Users", url: support_recruitment_cycle_users_path(params[:recruitment_cycle_year] || Settings.current_recruitment_cycle_year) },
-  { name: "PE Allocations", url: support_recruitment_cycle_allocations_path },
+{ name: "Providers", url: support_recruitment_cycle_providers_path(params[:recruitment_cycle_year] || Settings.current_recruitment_cycle_year) },
+{ name: "Users", url: support_recruitment_cycle_users_path(params[:recruitment_cycle_year] || Settings.current_recruitment_cycle_year) },
+*([name: "PE Allocations", url: support_recruitment_cycle_allocations_path] if params[:recruitment_cycle_year] == "2022"),
 ]) %>
