Use same course header title in both cycles
In the next cycle use "Is it on Find" instead of "Will it be on Find"

--- a/app/views/publish/courses/_course_table.html.erb
+++ b/app/views/publish/courses/_course_table.html.erb
@@ -4,7 +4,7 @@
       <th class="govuk-table__header">Course</th>
       <th class="govuk-table__header">Status</th>
       <th class="govuk-table__header">
-        <% if @recruitment_cycle.current_and_open? %>Is it<% else %>Will it be<% end %> on <abbr class="app-!-text-decoration-underline-dotted" title="Find postgraduate teacher training">Find</abbr>?
+       Is it on <abbr class="app-!-text-decoration-underline-dotted" title="Find postgraduate teacher training">Find</abbr>?
       </th>
       <th class="govuk-table__header">Applications</th>
       <% if @recruitment_cycle.current_and_open? %>
