--- a/app/views/layouts/find_layout.html.erb
+++ b/app/views/layouts/find_layout.html.erb
@@ -21,7 +21,7 @@
 
 <div class="govuk-width-container">
   <%= render FindInterface::PhaseBanner::View.new %>
-  <main class="govuk-main-wrapper" id="main-content" role="main"></main>
+  <main class="govuk-main-wrapper" id="main-content" role="main"><%= yield %></main>
 </div>
 
 <%= govuk_footer do |footer| %>
@@ -38,7 +38,7 @@
       <h2 class="govuk-visually-hidden">Support links</h2>
       <ul class="govuk-footer__inline-list govuk-!-margin-bottom-0">
         <li class="govuk-footer__inline-list-item">
-          <%= link_to "Accessibility", find_path, class: "govuk-footer__link" %>
+          <%= link_to "Accessibility", find_accessibility_path, class: "govuk-footer__link" %>
         </li>
         <li class="govuk-footer__inline-list-item">
           <%= link_to "Cookies", find_path, class: "govuk-footer__link" %>
