--- a/app/views/layouts/find_layout.html.erb
+++ b/app/views/layouts/find_layout.html.erb
@@ -24,37 +24,6 @@
   <main class="govuk-main-wrapper" id="main-content" role="main"></main>
 </div>
 
-<%= govuk_footer do |footer| %>
-  <%= footer.meta do %>
-    <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
-      <h2 class="govuk-heading-m">Get help</h2>
-
-      <p class="govuk-body-s govuk-!-margin-bottom-1">Call <%= t("get_into_teaching.tel") %> or <%= link_to "chat online", t("get_into_teaching.url_online_chat"), class: "govuk-footer__link" %></p>
-
-      <p class="govuk-body-s govuk-!-margin-bottom-1"><%= t("get_into_teaching.opening_times") %></p>
-
-      <p class="govuk-body-s">Free of charge</p>
-
-      <h2 class="govuk-visually-hidden">Support links</h2>
-      <ul class="govuk-footer__inline-list govuk-!-margin-bottom-0">
-        <li class="govuk-footer__inline-list-item">
-          <%= link_to "Accessibility", find_path, class: "govuk-footer__link" %>
-        </li>
-        <li class="govuk-footer__inline-list-item">
-          <%= link_to "Cookies", find_path, class: "govuk-footer__link" %>
-        </li>
-        <li class="govuk-footer__inline-list-item">
-          <%= link_to "Privacy policy", find_path, class: "govuk-footer__link" %>
-        </li>
-        <li class="govuk-footer__inline-list-item">
-          <%= link_to "Terms and conditions", find_path, class: "govuk-footer__link" %>
-        </li>
-      </ul>
-    </div>
-    <div class="govuk-footer__meta-item">
-      <a class="govuk-footer__link govuk-footer__copyright-logo govuk-!-margin-bottom-1" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">© Crown copyright</a>
-    </div>
-  <% end %>
-<% end %>
+<%= render 'layouts/find_footer' %>
 </body>
 </html>
