--- a/app/views/find/pages/privacy.html.erb
+++ b/app/views/find/pages/privacy.html.erb
@@ -49,7 +49,7 @@
       <li>
         for security purposes: our contracted suppliers collect part of the IP addresses of people visiting the Publish teacher training courses website (for example, if we were receiving continuous direct denial of service attacks from an IP address range then we could block it)
       </li>
-      <li>to enable users to use the service and receive updates: our contracted suppliers collect the names and emails of those publishing course listings on ‘Publish teacher training courses’</li>
+      <li>to enable users to use the service and receive updates: our contracted suppliers collect the names and emails of those publishing course listings on 'Publish teacher training courses'</li>
     </ul>
 
     <h2 class="govuk-heading-l">How long we will keep your personal&nbsp;data</h2>
@@ -77,17 +77,17 @@
       If you need to contact us regarding any of the above, please do so via the DfE site at: <%= govuk_link_to "https://www.gov.uk/contact-dfe", "https://www.gov.uk/contact-dfe" %>.
     </p>
     <p class="govuk-body">
-      You can <%= govuk_link_to "find out more about your data protection rights", "https://ico.org.uk/for-organisations/guide-to-data-protection/principle-6-rights" %> on the Information Commissioner’s website.
+      You can <%= govuk_link_to "find out more about your data protection rights", "https://ico.org.uk/for-organisations/guide-to-data-protection/principle-6-rights" %> on the Information Commissioner's website.
     </p>
 
     <h2 class="govuk-heading-l">The right to lodge a complaint</h2>
     <p class="govuk-body">
-      You have the right to raise any concerns with the Information Commissioner’s Office (ICO) via their website at <%= govuk_link_to "https://ico.org.uk/make-a-complaint/", "https://ico.org.uk/make-a-complaint/" %></a>.
+      You have the right to raise any concerns with the Information Commissioner's Office (ICO) via their website at <%= govuk_link_to "https://ico.org.uk/make-a-complaint/", "https://ico.org.uk/make-a-complaint/" %></a>.
     </p>
 
     <h2 class="govuk-heading-l">Contact information</h2>
     <p class="govuk-body">
-      If you have any questions about how your personal information will be used, please contact us at <%= bat_contact_mail_to %> and enter data privacy as a reference. For the Data Protection Officer (DPO) please contact us via gov.uk and mark it for the attention of the ‘DPO’.
+      If you have any questions about how your personal information will be used, please contact us at <%= bat_contact_mail_to %> and enter data privacy as a reference. For the Data Protection Officer (DPO) please contact us via gov.uk and mark it for the attention of the DPO.
     </p>
 
     <h2 class="govuk-heading-l">Last updated</h2>
