--- a/app/assets/stylesheets/find_application.scss
+++ b/app/assets/stylesheets/find_application.scss
@@ -4,3 +4,4 @@
 @import "js-enabled";
 @import "accessible-autocomplete/dist/accessible-autocomplete.min";
 @import "autocomplete";
+@import "description-list";
