--- a/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
+++ b/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
@@ -4,9 +4,13 @@
   </h1>
 
     <% if @course.is_uni_or_scitt? %>
-      <% if !@provider.can_sponsor_student_visa %>
+      <% if !@provider.can_sponsor_student_visa && !@provider.scitt? %>
         <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
       <% end %>
+
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+        Can your organisation sponsor Student visas for this course?
+      </legend>
     <% else %>
       <%= render "inset_text" %>
     <% end %>
